# JobHuntMindMap

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_db.py  config.sample.yaml  docker-compose.yml  pyproject.toml
.claude/agents/: feature-developer.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  DATA_PROCESSING.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  FIRST_RUN.md  MIND_MAP_STRUCTURE.md  REQUIREMENTS.md
scripts/: create_samples.py  run_daily.sh  verify_dashboard.py  verify_email.py  verify_ingestion.py  verify_resume.py  verify_resumes.py  verify_vault_manager.py
src/: main.py
src/core/: analysis_service.py  constants.py  database.py  gap_analysis.py  llm_client.py  network_graph.py  orchestrator.py  referral_service.py  relevance_scorer.py  resume_service.py
src/generator/: __init__.py  canvas_manager.py  dashboard_generator.py  resume_tailorer.py  sync_service.py  template_manager.py  vault_manager.py
src/ingest/: browser_manager.py  external_searcher.py  job_details_extractor.py  job_searcher.py  linkedin_parser.py  parsing_interface.py  resume_parser.py  selectors.py
src/notification/: email_service.py
src/utils/: exceptions.py  logger.py
temp_compile/: resume.aux  resume.tex
tests/: conftest.py  test_cli_commands.py  test_main.py
tests/core/: test_analysis_service.py  test_database.py  test_gap_analysis.py  test_llm_client.py  test_network_graph.py  test_orchestrator.py  test_referral_service.py  test_relevance_scorer.py  test_resume_service.py
tests/ingest/: test_job_searcher.py  (+4 more)
(+23 files in other folders)
