[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-hunt-mindmap"
version = "0.1.0"
description = "A local-first, privacy-focused tool to visualize job opportunities and professional network connections within Obsidian."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Job Hunt Mindmap User", email = "user@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pypdf>=5.1.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
  "playwright>=1.49.0",
  "google-generativeai>=0.8.0",
  "click>=8.1.7",
  "python-dotenv>=1.0.0",
  "colorama>=0.4.6",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "pre-commit>=3.5.0",
  "coverage-badge>=1.1.0",
]

[project.scripts]
mindmap = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
